--- a/deploy/webhook-alidns/templates/rbac.yaml
+++ b/deploy/webhook-alidns/templates/rbac.yaml
@@ -2,16 +2,45 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "webhook-alidns.fullname" . }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     app: {{ include "webhook-alidns.name" . }}
     chart: {{ include "webhook-alidns.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 ---
+#Define the ClusterRole which has the access tls secrets
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "webhook-alidns.fullname" . }}:secret-reader
+rules:
+  - apiGroups:
+      - ''
+    resources:
+      - 'secrets'
+    verbs:
+      - 'get'
+      - 'watch'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "webhook-alidns.fullname" . }}:secret-reader
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "webhook-alidns.fullname" . }}:secret-reader
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: {{ include "webhook-alidns.fullname" . }}
+    namespace: {{ .Release.Namespace | quote }}
+---
 # Grant the webhook permission to read the ConfigMap containing the Kubernetes
 # apiserver's requestheader-ca-certificate.
 # This ConfigMap is automatically created by the Kubernetes apiserver.
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ include "webhook-alidns.fullname" . }}:webhook-authentication-reader
@@ -33,7 +62,7 @@ subjects:
 ---
 # apiserver gets the auth-delegator role to delegate auth decisions to
 # the core apiserver
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ include "webhook-alidns.fullname" . }}:auth-delegator
@@ -53,7 +82,7 @@ subjects:
     namespace: {{ .Release.Namespace }}
 ---
 # Grant cert-manager permission to validate using our apiserver
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "webhook-alidns.fullname" . }}:domain-solver
@@ -70,7 +99,7 @@ rules:
     verbs:
       - 'create'
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ include "webhook-alidns.fullname" . }}:domain-solver
